--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     
     <select id="backgroundSelector">
         <option disabled selected value></option>
-        <option value="0">Chuva de Bloquinhos</option>
-        <option value="1">Boula</option>
-        <option value="2">Inseto Voador</option>
+        <option value="0">chuva de Bloquinhos</option>
+        <option value="1">boula</option>
+        <option value="2">mukito</option>
     </select>
 
     <script>
