--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
     <select id="backgroundSelector">
         <option disabled selected value></option>
-        <option value="0">chuva de Bloquinhos</option>
+        <option value="0">chuva de bloquinhos</option>
         <option value="1">boula</option>
         <option value="2">mukito</option>
     </select>
